--- a/Apply.html
+++ b/Apply.html
@@ -57,15 +57,15 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link> Home </a>
+            <a href="./index.html#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link> About Us </a>
+            <a href="./index.html#about" class="navbar-link" data-nav-link> About Us </a>
           </li>
 
           <li>
-            <a href="#features" class="navbar-link" data-nav-link> Features </a>
+            <a href="./index.html#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
@@ -73,7 +73,11 @@
           </li>
 
           <li>
-            <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
+            <a href="./index.html#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
+          </li>
+
+          <li>
+            <a href="./index.html#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
           <li>
@@ -81,7 +85,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="navbar-link" data-nav-link> Apply Now </a>
+            <a href="#Apply" class="navbar-link" data-nav-link> Apply Now </a>
           </li>
 
         </ul>
@@ -297,13 +301,9 @@
 
                         
                     <div class="inputfield">
-                      <button class="flex-btn" class="login-btn" type="submit">
-                        <div class="btn-icon">
-                          <ion-icon name="mail-open-outline" aria-hidden="true"></ion-icon>
-                          <span class="span"> Apply Now </span>
-                        </div>
-                      </button>
+                      <button type="submit" class="btn btn-primary"> Submit </button>
                     </div>
+
                     <p>This form is protected by reCAPTCHA and the Google <a href="./privacypolicy.html"> Privacy Policy </a> and <a href="./tandc.html">Terms of Service</a> apply.</p>
                   </div>
               </div>	
