--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
+      <a href="./index.html#home" class="logo"> Wensi Recruitment Agency </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="wrapper">
-          <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
+          <a href="./index.html#home" class="logo"> Wensi Recruitment Agency </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -72,6 +72,10 @@
           </li>
 
           <li>
+            <a href="#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
+          </li>
+
+          <li>
             <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
@@ -80,7 +84,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="navbar-link" data-nav-link> Apply Now </a>
+            <a href="./Apply.html#Apply" class="navbar-link" data-nav-link> Apply Now </a>
           </li>
 
         </ul>
@@ -91,7 +95,7 @@
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
       </button>
 
-      <a href="./Apply.html" class="btn-outline"> Apply Now </a>
+      <a href="./Apply.html#Apply" class="btn-outline"> Apply Now </a>
 
       <div class="overlay" data-nav-toggler data-overlay></div>
 
@@ -123,7 +127,7 @@
                 <div class="btn-icon">
                   <ion-icon name="mail-open-outline" aria-hidden="true"></ion-icon>
                 </div>
-                <a href="./Apply.html">
+                <a href="./Apply.html#Apply">
                   <span class="span"> Apply Now </span>
                 </a>
               </button>
@@ -380,10 +384,10 @@
       <!-- 
         - #COURSES
       -->
-      <section class="section service" id="services" aria-label="service">
+      <section class="section service" id="courses" aria-label="service">
         <div class="container">
 
-          <p class="section-subtitle text-center">-Courses Offerd-</p>
+          <p class="section-subtitle text-center">-Courses Offered-</p>
 
           <h2 class="h2 section-title text-center"> Courses </h2>
 
@@ -528,6 +532,155 @@
           </ul>
 
           <a href="./Courses.html" class="btn btn-primary"> See More </a>
+
+        </div>
+      </section>
+
+      <!-- 
+        - #Scholarships
+      -->
+      <section class="section service" id="scholarships" aria-label="scholarships">
+        <div class="container">
+
+          <p class="section-subtitle text-center">-Scholarship Opportunities-</p>
+
+          <h2 class="h2 section-title text-center"> Scholarships </h2>
+
+          <p class="section-text text-center">
+            Countries with Scholarship Opportunities and Awarded Percentages 
+          </p>
+
+          <h2 class="h2 section-title text-center"> Please Take Note that No Scholarships are offered on Medicine (Mbbs) </h2>
+
+          <ul class="grid-list">
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/service-1.png" width="140" height="140" loading="lazy"
+                    alt="" class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> China </h3>
+
+                  <p class="card-text">
+                    China offers up to 100% scholarships, with a requirement of a $3000 payment only for the first year.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/service-2.png" width="140" height="140" loading="lazy" alt=""
+                    class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> India </h3>
+
+                  <p class="card-text">
+                    India offers scholarships ranging from 50% to 100% for tuition fees exclusively.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/service-3.png" width="140" height="140" loading="lazy"
+                    alt="" class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> Poland </h3>
+
+                  <p class="card-text">
+                    Poland does not offer any scholarships for international students.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
+                    class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> Cyprus </h3>
+
+                  <p class="card-text">
+                    Cyprus offers scholarships ranging from 50% to 75% for eligible students.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
+                    class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> United Kingdom (UK) </h3>
+
+                  <p class="card-text">
+                    The UK does not offer scholarships for international students, but students can opt for self-sponsorship.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
+                    class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> Canada </h3>
+
+                  <p class="card-text">
+                    Canada does not offer scholarships for international students, but students can opt for self-sponsorship.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+          </ul>
 
         </div>
       </section>
@@ -768,7 +921,6 @@
   </main>
 
 
-
   <!-- 
     - #FOOTER
   -->
@@ -810,6 +962,10 @@
           </li>
 
           <li>
+            <a href="#scholarships" class="footer-link"> Scholarships </a>
+          </li>
+
+          <li>
             <a href="#faq" class="footer-link"> FAQ </a>
           </li>
 
@@ -822,7 +978,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="footer-link"> Apply </a>
+            <a href="./Apply.html#Apply" class="footer-link"> Apply </a>
           </li>
 
           <li>
