--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -72,6 +72,10 @@
           </li>
 
           <li>
+            <a href="#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
+          </li>
+
+          <li>
             <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
@@ -80,7 +84,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="navbar-link" data-nav-link> Apply Now </a>
+            <a href="./Apply.html#Apply" class="navbar-link" data-nav-link> Apply Now </a>
           </li>
 
         </ul>
@@ -91,7 +95,7 @@
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
       </button>
 
-      <a href="./Apply.html" class="btn-outline"> Apply Now </a>
+      <a href="./Apply.html#Apply" class="btn-outline"> Apply Now </a>
 
       <div class="overlay" data-nav-toggler data-overlay></div>
 
@@ -224,6 +228,10 @@
           </li>
 
           <li>
+            <a href="#scholarships" class="footer-link"> Scholarships </a>
+          </li>
+
+          <li>
             <a href="#faq" class="footer-link"> FAQ </a>
           </li>
 
@@ -236,7 +244,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="footer-link"> Apply </a>
+            <a href="./Apply.html#Apply" class="footer-link"> Apply </a>
           </li>
 
           <li>
