--- a/Courses.html
+++ b/Courses.html
@@ -72,6 +72,10 @@
           </li>
 
           <li>
+            <a href="#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
+          </li>
+
+          <li>
             <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
@@ -258,6 +262,10 @@
           </li>
 
           <li>
+            <a href="#scholarships" class="footer-link"> Scholarships </a>
+          </li>
+
+          <li>
             <a href="#faq" class="footer-link"> FAQ </a>
           </li>
 
@@ -270,7 +278,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="footer-link"> Apply </a>
+            <a href="./Apply.html#Apply" class="footer-link"> Apply </a>
           </li>
 
           <li>
