--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
             Countries with Scholarship Opportunities and Awarded Percentages 
           </p>
 
-          <h2 class="h2 section-title text-center"> Please Take Note that No Scholarships are offered on Medicine (Mbbs) </h2>
+          <h2 class="h2 section-title text-center"> NB: No Scholarships are offered on Medicine (Mbbs) </h2>
 
           <ul class="grid-list">
 
@@ -558,8 +558,8 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-1.png" width="140" height="140" loading="lazy"
-                    alt="" class="img">
+                  <img src="./assets/images/china-scholarship.png" width="140" height="140" loading="lazy"
+                    alt="china-scholarship.png" class="img">
                 </figure>
 
                 <div class="card-content">
@@ -579,7 +579,7 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-2.png" width="140" height="140" loading="lazy" alt=""
+                  <img src="./assets/images/india-scholarship.png" width="140" height="140" loading="lazy" alt="india-scholarship.png"
                     class="img">
                 </figure>
 
@@ -600,8 +600,8 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-3.png" width="140" height="140" loading="lazy"
-                    alt="" class="img">
+                  <img src="./assets/images/poland-scholarship.png" width="140" height="140" loading="lazy"
+                    alt="poland-scholarship.png" class="img">
                 </figure>
 
                 <div class="card-content">
@@ -621,7 +621,7 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
+                  <img src="./assets/images/cyprus-scholarship.png" width="140" height="140" loading="lazy" alt="cyprus-scholarship.png"
                     class="img">
                 </figure>
 
@@ -642,7 +642,7 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
+                  <img src="./assets/images/united-kingdom-scholarship.png" width="140" height="140" loading="lazy" alt="united-kingdom-scholarship.png"
                     class="img">
                 </figure>
 
@@ -663,7 +663,7 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
+                  <img src="./assets/images/canada-scholarship.png" width="140" height="140" loading="lazy" alt="canada-scholarship.png"
                     class="img">
                 </figure>
 
